# allscale_api

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Readme.md  createClang.sh  createDebug.sh  createRelease.sh
cmake/: add_module.cmake  build_settings.cmake  msvc_settings.cmake  msvc_source_group.cmake
cmake/dependencies/: googletest.cmake
code/: CMakeLists.txt
code/api/: CMakeLists.txt
code/api/include/allscale/api/core/: data.h  io.h  prec.h  treeture.h
code/api/include/allscale/api/core/impl/omp_cilk/: treeture.h
code/api/include/allscale/api/core/impl/reference/: io.h  lock.h  profiling.h  runtime_predictor.h  task_id.h  treeture.h
code/api/include/allscale/api/core/impl/sequential/: treeture.h
code/api/include/allscale/api/user/: save_to_binary.h
code/api/include/allscale/api/user/algorithm/: pfor.h  preduce.h  stencil.h  vcycle.h
code/api/include/allscale/api/user/algorithm/internal/: operation_reference.h
code/api/include/allscale/api/user/data/: adaptive_grid.h  bag.h  binary_tree.h  grid.h  map.h  mesh.h  scalar.h  static_grid.h
code/api/include/allscale/api/user/data/detail/: adaptive_grid_detail.h
code/api/include/allscale/api/user/operator/: async.h  ops.h  pfor.h  preduce.h  stencil.h  vcycle.h
code/api/include/allscale/api/user/operator/internal/: operation_reference.h
code/api/src/: allscale-perf.cxx
code/api/test/core/: data.cc  io.cc  prec.cc
code/api/test/core/impl/reference/: profiling.cc  runtime.cc  task_id.cc  treeture.cc
code/api/test/core/impl/sequential/: treeture.cc
code/api/test/user/: arithmetic.cc  save_to_binary_test.cc
code/api/test/user/algorithm/: async.cc  pfor.cc  preduce.cc  stencil.cc  vcycle.cc
code/api/test/user/algorithm/internal/: operator_reference.cc
code/api/test/user/data/: adaptive_grid.cc  bar_mesh.inl  binary_tree.cc  data_item_test.inl  grid.cc  map.cc  mesh.cc  scalar.cc  static_grid.cc  vector.cc
code/api/test/user/operator/: async.cc  ops.cc  pfor.cc  preduce.cc  stencil.cc  vcycle.cc
code/api/tutorial/: CMakeLists.txt
code/api/tutorial/heat_stencil/: 03_pfor_collapsed.cxx
code/api/tutorial/matrix_multiplication/: 00_c_style.cxx  01_basic.cxx  03_pfor_simple.cxx  04_pfor_collapsed.cxx
code/cmake/: add_unit_test.cmake  environment.cmake
code/include/allscale/api/core/: data.h  future.h  immediate.h  io.h  parec.h  prec.h  treeture.h  treeture_with_values.h
code/include/allscale/api/core/impl/naive/: future.h
code/include/allscale/api/core/impl/omp_cilk/: future.h  treeture.h
code/include/allscale/api/core/impl/reference/: future.h  io.h  lock.h  profiling.h  queue.h  runtime.h  runtime_predictor.h  task_id.h  treeture.h  work_item_id.h
code/include/allscale/api/core/impl/sequential/: treeture.h
code/include/allscale/api/core/impl/simple/: future.h  lock.h  runtime.h
code/include/allscale/api/core/impl/simple_old/: future.h
code/include/allscale/api/core/impl/simple_old/runtime/: runtime.h
code/include/allscale/api/user/: arithmetic.h  pfor.h
code/include/allscale/api/user/data/: grid.h  map.h  mesh.h  scalar.h  vector.h
code/include/allscale/api/user/operator/: pfor.h  stencil.h  vcycle.h
code/include/allscale/api/user/operator/internal/: operation_reference.h
code/include/allscale/utils/: assert.h  bitmanipulation.h  large_array.h  range.h  serializer.h  static_map.h  table.h
code/include/allscale/utils/printer/: join.h  vectors.h
code/src/: allscale-perf.cxx  empty.cpp
code/test/: future.cc  parec.cc
code/test/core/: data.cc  future.cc  io.cc  parec.cc  prec.cc  treeture.cc  treeture.cc_with_values
code/test/core/impl/: omp_cilk_parec.cc  omp_cilk_prec.cc  reference_parec.cc  reference_prec.cc
code/test/core/impl/omp_cilk/: future.cc  prec.cc  runtime.cc  treeture.cc
code/test/core/impl/reference/: future.cc  lock.cc  prec.cc  profiling.cc  queue.cc  runtime.cc  runtime_predictor.cc  task_id.cc  treeture.cc  work_item_id.cc
code/test/core/impl/sequential/: treeture.cc
code/test/impl/: omp_cilk_future.cc  omp_cilk_runtime.cc  reference_future.cc  reference_runtime.cc
code/test/simple/: simple_runtime.cc
code/test/simple_old/: runtime.cc
code/test/user/: pfor.cc
code/test/user/data/: bag.cc  data_item_test.inl  grid.cc  mesh.cc  vector.cc
code/test/user/operator/: pfor.cc  stencil.cc
code/test/user/operator/internal/: operator_reference.cc
code/test/utils/: large_array.cc  serializer.cc  table.cc
code/tutorials/: CMakeLists.txt
code/tutorials/src/adaptivegrid/: 00_wave_simulation.cxx  01_adaptive_wave_simulation.cxx  02_adaptive_wave_simulation_improved.cxx  02_adaptive_wave_simulation_stencil.cxx  animate.rb  plot.rb  wave_log.h
code/tutorials/src/heat_stencil/: 00_c_style.cxx  01_basic.cxx  02_data_structure.cxx  03_pfor.cxx  04_pfor_collapsed.cxx  04_pfor_overlap.cxx  05_pfor_overlap.cxx  06_stencil.cxx
code/tutorials/src/io/: 00_io.cxx
code/tutorials/src/matrix_multiplication/: 00_c_style.cxx  01_basic.cxx  02_data_structure.cxx  03_pfor_simple.cxx  04_pfor_collapsed.cxx
code/tutorials/src/mesh/: 00_mesh.cxx  01_demo_mesh.cxx  01_demo_mesh_io.h  01_demo_mesh_utils.h
code/tutorials/src/prec/: 00_fibonacci_c_style.cxx  01_fibonacci_prec.cxx  02_nqueens_c_style.cxx  03_nqueens_prec.cxx
code/utils/: CMakeLists.txt
code/utils/include/allscale/utils/: assert.h  bitmanipulation.h  compatibility.h  finalize.h  functional_utils.h  large_array.h  optional.h  range.h  serializer.h  static_grid.h  static_map.h  table.h  tuple_utils.h  unused.h  vector.h
code/utils/include/allscale/utils/serializer/: arrays.h  maps.h  optionals.h  pairs.h  strings.h  tuple.h  unordered_maps.h  vectors.h
code/utils/test/: array_utils.cc  bag.cc  finalize.cc  functional_utils.cc  large_array.cc  optional.cc  range.cc  raw_buffer.cc  serializer.cc  static_grid.cc  static_map.cc  table.cc  tuple_utils.cc  type_list.cc  vector.cc
code/utils/test/serializer/: arrays.cc  maps.cc  optionals.cc  pairs.cc  strings.cc  tuples.cc  unordered_maps.cc  vectors.cc
scripts/ci/: build  build_coverage  defaults.sh  job_allscale_api  (+2 more)
(+6 files in other folders)
